<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="50dp">
    <ImageView
        android:id="@+id/iv_usericon"
        android:src="@mipmap/ic_launcher"
        android:layout_width="50dp"
        android:layout_height="50dp"/>
    <LinearLayout
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/tv_username"
            android:text="@string/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_msgcontent"
            android:text="@string/msgcontent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <TextView
        android:id="@+id/tv_msgtime"
        android:layout_gravity="center_vertical"
        android:text="@string/msgtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>