<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">
    <LinearLayout
        android:gravity="center"
        android:fitsSystemWindows="true"
        android:background="@color/top"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:text="FreeChat(5)"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
   <FrameLayout
       android:id="@+id/container_fragment"
       android:layout_weight="1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <fragment
           android:id="@+id/frag_msg"
           android:name="com.pgj.freechat.ui.msg.MsgFragment"
           android:layout_width="match_parent"
           android:layout_height="match_parent"/>
   </FrameLayout>
    <RadioGroup
        android:padding="10dp"
        android:background="@color/bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <RadioButton
            android:id="@+id/rb_msg"
            android:drawableTop="@drawable/main_msg"
            android:gravity="center"
            android:button="@null"
            android:layout_weight="1"
            android:text="@string/msg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <RadioButton
            android:id="@+id/rb_friend"
            android:drawableTop="@drawable/main_friend"
            android:gravity="center"
            android:button="@null"
            android:layout_weight="1"
            android:text="@string/friend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <RadioButton
            android:id="@+id/rb_explore"
            android:drawableTop="@drawable/main_explore"
            android:gravity="center"
            android:button="@null"
            android:layout_weight="1"
            android:text="@string/explore"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </RadioGroup>
</LinearLayout>